# gclear

./: .env.example  .gitignore  Makefile  README.md  TRAINING.md  _config.yml  bot.py  context.md  overlay.py  pyproject.toml  som.py  strategist.py  test_click.py  test_grok.py  test_model.py  test_ocr.py  train.py
.github/workflows/: ci.yml
_layouts/: default.html
data_collection/: calibrate.py  config.py
docs/: training.md
src/gclear/: __init__.py  overlay.py  som.py
src/gclear/data_collection/: __init__.py  calibrate.py  overlay.py
tests/: test_grok.py  test_model.py
