[project]
name = "gclear"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pyautogui>=0.9.54",
    "pyobjc-framework-quartz>=12.1",
    "pyqt6>=6.10.0",
    "pytesseract>=0.3.13",
    "roboflow>=1.2.11",
    "ultralytics>=8.3.233",
]
