[project]
name = "gclear"
version = "0.1.0"
description = "A League of Legends jungle bot with full clear capabilities, powered by Grok"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pyautogui>=0.9.54",
    "pyobjc-framework-quartz>=12.1; sys_platform == 'darwin'",
    "pyqt6>=6.10.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "roboflow>=1.2.11",
    "ultralytics>=8.3.233",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gclear"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
